Implemneted cart and user authentication

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
 ENV=development
 MONGO_URI=mongodb+srv://arjunps96:Password123@proshop.fq5rv.mongodb.net/proshop_ecommerece?retryWrites=true&w=majority
+JWT_SECRET="arjunps96"
