Implemneted user profile orders

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=5000
 ENV=development
 MONGO_URI=mongodb+srv://arjunps96:Password123@proshop.fq5rv.mongodb.net/proshop_ecommerece?retryWrites=true&w=majority
 JWT_SECRET="arjunps96"
+PAYPAL_CLIENT_ID=AZvpJ3lo_KszHMXBiYW1vUcytdzgypCR3pi8bx1OZGoR7Y_Ey-ulbLrEMqsRXyzD6EMDwFJeUAxCz1q7
