prepare for depolyment

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "server": "nodemon backEnd/server",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "seeder:import": "nodemon backEnd/seeder",
-    "export": "nodemon backEnd/seeder -d"
+    "export": "nodemon backEnd/seeder -d",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "Arjun",
   "license": "ISC",
